# Snowflake-c

./: .gitignore  CMakeLists.txt  README.md  algo.c  algo.h  bsp.c  bsp.h  bsp_test.c  imageOut.c  makefile  snowflake.c  speed-test.sh
src/: algo.c  algo.h  arg_parsing.c  arg_parsing.h  bsp.c  bsp.h  bsp_test.c  flake_log.c  flake_log.h  imageOut.c  imageOut.h  image_out.c  image_out.h  render_bsp.c  render_bsp.h  render_log.c  render_log.h  snowflake.c  snowflakeGen.c  snowflakeGen.h  snowflake_gen.c  snowflake_gen.h  tga.c  tga.h  write_png.c
src/args/: arg_parsing.c  arg_parsing.h
src/data/: bsp.c  bsp.h  bsp_test.c  flake.c  flake.h
src/data/bsp/: bsp.c  bsp.h  bsp_test.c  bsp_test.h
src/data/linear/: linear.c  linear.h
src/log/: flake_log.c  flake_log.h
src/render/: render_log.c  render_log.h  write_png.c  write_png.h
src/tests/: tests.c  tests.h
